[project]
name = "pyrocket-launch"
version = "0.3.0"
description = "Rocket Simulation Toy"
authors = [
    {name = "pysatellite", email = "pysatellite@gmail.com"},
]
dependencies = [
    "glfw>=2.6.2",
    "p5>=0.7.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
